<resources>
    <string name="app_name">iSpeak Signs</string>
    <string name="nav_header_subtitle">Gender and Development Unit</string>
    <string name="selected_language">Filipino</string>
    <string name="app_logo_desc">iSpeak Signs Logo</string>
    <string name="cvsu_logo_desc">Cavite State University Logo</string>
    <string name="fab_recognize_desc">Rekognisyon</string>
    <string name="label_see_more">TINGNAN LAHAT</string>
    <string name="heart_desc">Idagdag sa Paborito</string>
    <string name="menu_home">Home</string>
    <string name="menu_learn">Mag-Aral</string>
    <string name="menu_fsl_wotd">FSL - Senyas Ngayong Araw</string>
    <string name="menu_favorites">Mga Paborito</string>
    <string name="act_recognize">FSL Rekognisyon</string>
    <string name="menu_cvsu">CvSU - Misyon at Bisyon</string>
    <string name="menu_mini_game">Laro</string>
    <string name="menu_setting_label">Setting</string>
    <string name="menu_darkmode_label">Dark Mode</string>
    <string name="menu_language_label">Wika</string>
    <string name="menu_about">Tungkol sa App</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_search">Hanapin</string>
    <string name="profile_see_more_title">Lahat ng Kategorya</string>
    <string name="home_greeting1_label">Kumusta, %1$s!</string>
    <string name="learn_greeting1_label">Ano ang nais mong matutunan\nngayong araw?</string>
    <string name="favorite_greeting1_label">Bawat salita ay mahalaga!</string>
    <string name="favorite_greeting2_label">Maaaring i-save ang mga salita o parirala na iyong mapipili</string>
    <string name="favorite_no_item_title">Wala ka pang paborito? Tumuklas na ng salita at idadag rito!</string>
    <string name="morning_label">Magandang Umaga sa Iyo!</string>
    <string name="afternoon_label">Magandang Hapon sa Iyo!</string>
    <string name="night_label">Magandang Gabi sa Iyo!</string>
    <string name="edit_text_hint">Humanap ng kategorya</string>
    <string name="edit_text_hint_learn"><font size="10">Humanap ng kategorya o salita</font></string>
    <string name="learn_word_title_set">Tuklasin ang </string>
    <string name="search_category">Kategorya</string>
    <string name="learn_category_word">Salita</string>
    <string name="learn_category_phrase">Parirala</string>
    <string name="menu_learn_label">Matuto</string>
    <string name="video_category_label">Mga Parirala</string>
    <string name="home_learn_category_description">Tuklasin ang iba\'t ibang salita na maaari mong matutunan</string>
    <string name="home_learn_video_description">Panoorin ang iba\'t ibang ekspresyon ng mga parirala sa FSL</string>
    <string name="fsl_item_name">Bansa</string>
    <string name="item_image_desc">Imahe na nagpapakita ng paglalarawan ng FSL na salita</string>
    <string name="parts_of_speech">pangngalan</string>
    <string name="audio_desc">Audio (Filipino)</string>
    <string name="how_to_label">Paano gawin (sa Filipino)</string>
    <string name="how_to_desc">isenyas ang letrang \'Y\' sa paikot na galaw malapit sa iyong kabilang siko</string>
    <string name="play_audio_desc">I-play ang audio</string>
    <string name="cvsu_mission_nav">CVSU MISYON</string>
    <string name="cvsu_vision_nav">CVSU BISYON</string>
    <string name="cvsu_label_mission">Misyon</string>
    <string name="cvsu_label_vision">Bisyon</string>
    <string name="cvsu_text_mission">Ang Cavite State University ay makapagbibigay ng mahusay, pantay, at makabuluhang edukasyon sa sining, agham, at teknolohiya sa pamamagitan ng may kalidad na pagtuturo at tumutugon sa pangangailangang pananaliksik at mga gawaing pang kaunlaran. Makalikha ito ng mga indibidwal na dalubhasa, may kasanayan at kagandahang asal para sa pandaigdigang kakayahan.</string>
    <string name="cvsu_text_vision">Ang nangungunang pamantasan sa makasaysayang Kabite at kinikilala sa kahusayan sa paghubog ng mga indibidwal na may pandaigdigang kakayahan at kagandahang asal.</string>
    <string name="user_name">Juan</string>
    <string name="user_image_desc">Imahe ng User</string>
    <string name="edit_user_name_desc">i-edit ang pangalan ng user</string>
    <string name="profile_streak_label">Sunod sunod na araw</string>
    <string name="profile_streak_count">%1$s na araw</string>
    <string name="word_discovered_text">%1$s\nSalitang\nnatuklasan</string>
    <string name="phrase_discovered_label">%1$s\nPariralang\nnatuklasan</string>
    <string name="favorite_word_phrase_label">%1$s\nPaboritong\nSalita/Parirala</string>
    <string name="profile_category_progress">Progreso sa mga Kategorya</string>
    <string name="longest_streak_days">Pinakamahabang araw ng pag-login: %1$s day/s</string>
    <string name="recog_app_name">iSpeak Signs Rekognisyon</string>
    <string name="recog_version">BETA</string>
    <string name="idagdag">Idagdag</string>
    <string name="bawasan">Bawasan</string>
    <string name="learn_item_name">Kasarian</string>
    <string name="learn_item_type">(Salita)</string>
    <string name="learn_item_count">10 salita</string>
    <string name="learn_list_category_logo">Logo ng Kategorya</string>
    <string name="learn_category_progress_label">Simulan nang matuto!</string>
    <string name="learn_list_word_learned">Salitang natuklasan</string>
    <string name="learn_list_video_learned">Pariralang natuklasan</string>
    <string name="learn_list_progress">%1$s/%2$s</string>
    <string name="play_video_desc">i-play ang video</string>
    <string name="video_item_category_desc">Kategorya: %1$s</string>
    <string name="una">Simulan nang matuto!</string>
    <string name="pangalawa">Malapit na sa kalahati!</string>
    <string name="pangatlo">Nasa kalahati ka na!</string>
    <string name="pangapat">Lagpas na sa kalahati!</string>
    <string name="panglima">Malapit mo na matapos!</string>
    <string name="huli">Natapos mo na!</string>
    <string name="save">i-Save</string>
    <string name="pumili_ng_wika">Pumili ng Wika ng App</string>
    <string name="about_thesis_title">iSPEAK SIGNS: A FILIPINO SIGN LANGUAGE LEARNING APPLICATION WITH STATIC FSL RECOGNITION FOR CAVITE STATE UNIVERSITY – CAVITE CITY CAMPUS GENDER AND DEVELOPMENT UNIT</string>
    <string name="about_gad">Gender and Development Resource Center</string>
    <string name="about_cvsu_gad">CvSU-CCC GAD</string>
    <string name="gad_logo_desc">Gender and Development Unit Logo</string>
    <string name="cvsu_name">Cavite State University - Cavite City Campus</string>
    <string name="member_label_title1">Kilalanin ang aming Team:</string>
    <string name="member_label_title2">Sign Youth Tech</string>
    <string name="member_label_title3">(Signs, Youth and Technology)</string>
    <string name="member1_image_desc">Imahe ng Pang Unang Miyembro</string>
    <string name="member1_name">John Bernard Tinio</string>
    <string name="member1_role">Leader, Lead Programmer</string>
    <string name="member2_name">Marie Ann Karen De Guzman</string>
    <string name="member2_role">Lead Graphic Designer</string>
    <string name="member2_image_desc">Imahe ng Pangalawang Miyembro</string>
    <string name="member3_image_desc">Imahe ng Pangatlong Miyembro</string>
    <string name="member3_name">Rei Anne P. Velasco</string>
    <string name="member3_role">Documentation Researcher</string>
    <string name="greeting_about">Mabuhay!</string>
    <string name="about_i">i</string>
    <string name="about_speak_label">Speak Signs</string>
    <string name="espesyal_na_pasasalamat">Espesyal na Pasasalamat</string>
    <string name="sirKingDesc">GAD Coordinator at Thesis Adviser</string>
    <string name="graphic_design">Grapikong Disenyo</string>
    <string name="localization">Lokalisasyon</string>
    <string name="ispeak_signs_feedbacks">iSpeak Signs - Mga Puna</string>
    <string name="feedback_desc">Maaaring magbigay ng suhestyon o puna ukol sa iyong karanasan sa paggamit ng app</string>
    <string name="humanap_ng_kategorya">Humanap ng Kategorya</string>
    <string name="humanap_ng_fsl_na_salita">Humanap ng FSL na Salita</string>
    <string name="humanap_ng_fsl_na_parirala">Humanap ng FSL na Parirala</string>
    <string name="pumili_ng_avatar">Pumili ng Avatar</string>
    <string name="i_save">i-save</string>
    <string name="camera_flash">Camera Flash</string>
    <string name="ibalik">Ibalik</string>
    <string name="susunod">Susunod</string>
    <string name="tapos">Wakas</string>
    <string name="mini_game_all_learned_words">%1$s/129</string>
    <string name="mini_game_warning">Hindi sapat ang iyong alam na salita (%1$s/129)\nSubukang tumuklas pa</string>
    <string name="mini_game_score_label">MATAAS \nNA \nPUNTOS</string>
    <string name="mini_game_level_reach_label">Level\nna\nNarating</string>
    <string name="mini_game_play_game_label">MAGLARO</string>
    <string name="mini_game_how_to_label">Paano maglaro</string>
    <string name="time_label">Oras: %1$ss</string>
    <string name="guess_label">Anong senyas ito?</string>
    <string name="game_screen_category_label">Kategorya: %1$s</string>
    <string name="pause_game_desc">i-pause ang laro</string>
    <string name="ang_laro_ay_nakatigil">Ang Laro ay nakatigil</string>
    <string name="game_resume_label">ituloy</string>
    <string name="main_menu">main menu</string>
    <string name="level_label">Level %1$s/25</string>
    <string name="life_label">%1$s</string>
    <string name="iskor_label">PUNTOS</string>
    <string name="congrats_label">Magbunyi!\nTama ang iyong sagot</string>
    <string name="congrats_finished_label">Magbunyi!\nNatapos mo na ang laro</string>
    <string name="loss_finished_label">Natapos mo na ang laro</string>
    <string name="high_score_achieved_label">Bagong mataas na puntos ay nakamit!</string>
    <string name="perfect_answer_label">Perpekto ang iyong mga sagot!</string>
    <string name="correct_answer_label">Ang tamang sagot ay %1$s</string>
    <string name="game_over_label">Tapos na ang laro\nUbos na ang iyong buhay</string>
    <string name="answer_wrong_label">Mali ang iyong sagot\nBuhay na natitira: %1$s</string>
    <string name="learn_the_word_label"><u>Aralin ang salita: %1$s</u></string>
    <string name="badge_toast">Ikaw ay isang \"FSL Learner\"</string>
    <string name="magsumite_ng_puna">Magsumite ng puna</string>
    <string name="trivia1">Ang pagkawala ng pandinig ay maaaring mula sa banayad hanggang sa malalim at may maraming iba\'t ibang dahilan, kabilang ang pinsala, sakit, genetic defect at ang proseso ng pagtanda.</string>
    <string name="trivia2">Ang pinakakaraniwang sanhi ng nakuhang pagkawala ng pandinig ay ingay, na bumubuo sa mahigit isang-kapat ng mga taong apektado ng pagkawala ng pandinig.</string>
    <string name="trivia3">Sa International Day of Sign Languages, Set. 23, ipinagdiriwang natin ang pambansang sign language ng Pilipinas, Filipino Sign Language (FSL).</string>
    <string name="trivia4">Kinilala ang FSL bilang pambansang sign language ng Filipino Deaf sa pamamagitan ng Filipino Sign Language Act noong Oktubre 2018. Ang batas ay nag-uutos na ang FSL ay gamitin sa mga transaksyon sa mga Bingi at bilang wika ng pagtuturo para sa mga Bingi na nag-aaral.</string>
    <string name="trivia5">Sina Rafael Abat at Liza B. Martinez ay pinagsama-sama ang mga "milestones and landmark events" ng pag-unlad ng Filipino linguistic signing sa apat na alon, ito ay ang mga naganap noong unang bahagi ng 1900s, 1960s, kalagitnaan ng 1970s, at 1990s.</string>
    <string name="trivia6">Ang pagkawala ng pandinig ay isang karaniwang problema na dulot ng ingay, pagtanda, sakit, at pagmamana.</string>
    <string name="trivia7">15% ng populasyon ng Pilipinas ay may katamtaman o mas matinding  pagkawala ng pandinig, natuklasan ng isang pag-aaral.</string>
    <string name="trivia8">May mga antas ng pagkawala ng pandinig: banayad, katamtaman, malubha, malalim.</string>
</resources>