<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.artemis.ispeaksigns.main_fragments.nav_home"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_fsl_wotd"
            app:destination="@id/nav_fsl_wotd"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_nav_home_to_nav_learn"
            app:destination="@id/nav_learn"/>
        <action
            android:id="@+id/action_nav_home_to_learn_category_word"
            app:destination="@id/learn_category_word" />
        <action
            android:id="@+id/action_nav_home_to_learn_category_video"
            app:destination="@id/learn_category_video" />
        <action
            android:id="@+id/action_nav_home_to_fragment_search"
            app:destination="@id/nav_search" />
    </fragment>
    <fragment
        android:id="@+id/nav_fsl_wotd"
        android:name="com.artemis.ispeaksigns.main_fragments.nav_fsl_wotd"
        android:label="@string/menu_fsl_wotd"
        tools:layout="@layout/fragment_fsl_wotd" />
    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.artemis.ispeaksigns.main_fragments.nav_favorites"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
    <activity
        android:id="@+id/act_recognize"
        android:name="com.artemis.ispeaksigns.RecognizeActivity"
        android:label="@string/act_recognize"
        tools:layout="@layout/activity_recognize" />
    <fragment
        android:id="@+id/nav_cvsu"
        android:name="com.artemis.ispeaksigns.main_fragments.nav_cvsu"
        android:label="@string/menu_cvsu"
        tools:layout="@layout/fragment_cvsu" />
    <fragment
        android:id="@+id/nav_mini_game"
        android:name="com.artemis.ispeaksigns.main_fragments.nav_mini_game"
        android:label="@string/menu_mini_game"
        tools:layout="@layout/fragment_mini_game" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.artemis.ispeaksigns.main_fragments.nav_about"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.artemis.ispeaksigns.main_fragments.nav_profile"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

<!--    Learn Fragments-->
    <fragment
        android:id="@+id/nav_learn"
        android:name="com.artemis.ispeaksigns.main_fragments.nav_learn"
        android:label="@string/menu_learn"
        tools:layout="@layout/fragment_learn" >
        <action
            android:id="@+id/action_nav_learn_to_nav_search"
            app:destination="@id/nav_search" />
    </fragment>
    <fragment
        android:id="@+id/learn_category_word"
        android:name="com.artemis.ispeaksigns.sub_fragments.learn_word_list"
        android:label="@string/learn_category_word"
        tools:layout="@layout/fragment_learn_word_list" />
    <fragment
        android:id="@+id/learn_category_video"
        android:name="com.artemis.ispeaksigns.sub_fragments.learn_video_list"
        android:label="@string/learn_category_phrase"
        tools:layout="@layout/fragment_learn_video_list" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.artemis.ispeaksigns.main_fragments.nav_search"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search" />


</navigation>