<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/learn_word_item_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sub_fragments.learn_word_item">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/learn_word_image_parent"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorPrimaryVariant"
            app:cardCornerRadius="0dp"
            app:contentPadding="50dp">

            <ImageView
                android:id="@+id/learn_word_item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/item_image_desc"
                android:src="@drawable/ic_buwan"
                android:tint="@color/white" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/learn_word_image_parent"
            android:paddingStart="20dp"
            android:paddingTop="30dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/learn_word_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_book_regular"
                android:text="@string/fsl_item_name"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/parts_of_speech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parts_of_speech"
                android:textColor="@color/gray_text_color"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/learn_word_item_name" />

            <ImageView
                android:id="@+id/learn_word_item_favorite"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/heart_desc"
                android:src="@drawable/ic_favorites_outline"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/learn_word_item_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/learn_word_item_name" />

            <TextView
                android:id="@+id/audio_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/audio_desc"
                android:textColor="@color/gray_text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parts_of_speech" />

            <ImageView
                android:id="@+id/learn_word_play_audio"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingEnd="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:contentDescription="@string/play_audio_desc"
                android:src="@drawable/ic_audio"
                android:tint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audio_label"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/how_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/how_to_label"
                android:textColor="@color/gray_text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/learn_word_play_audio" />

            <TextView
                android:id="@+id/learn_word_how_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gotham_book_regular"
                android:text="@string/how_to_desc"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/how_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</ScrollView>