<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_fragments.nav_cvsu">

    <RelativeLayout
        android:id="@+id/navigation_layout"
        android:layout_width="50dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cvsu_mission"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/gotham_book_regular"
            android:text="@string/cvsu_mission_nav"
            android:background="@drawable/highlight_text"
            android:textColor="@color/colorSecondary"
            android:layout_centerHorizontal="true"
            android:rotation="-90"
            android:layout_marginTop="102dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cvsu_vision"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="150dp"
            android:layout_marginTop="242dp"
            android:rotation="-90"
            android:fontFamily="@font/gotham_book_regular"
            android:text="@string/cvsu_vision_nav"
            android:textStyle="bold"
            android:textColor="@color/gray_text_color"
            android:textSize="16sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/navigation_layout"
        android:paddingTop="58dp"
        android:paddingStart="10dp"
        android:paddingEnd="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvsu_videoViewLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/cvsu_video_thumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_magaral_bg"
                        android:background="@color/may_green"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/cvsu_play_video"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_play"
                        android:tint="@color/white"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/play_video_desc" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/cvsu_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/cvsu_label_mission"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:fontFamily="@font/gotham_book_regular"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_below="@id/cvsu_videoViewLayout"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/cvsu_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cvsu_label"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:fontFamily="@font/gotham_book_regular"
                android:gravity="center"
                android:text="@string/cvsu_text_mission"/>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>